issue with color showing up white on mobile.

--- a/scss/4-custom/_statler-magazine.scss
+++ b/scss/4-custom/_statler-magazine.scss
@@ -126,6 +126,9 @@ p.ewv-magazine{
   border: 2px solid #0033A0;
   color: #2C2A29;
 }
+a.ewv-magazine-button{
+  color:#0033A0!important;
+}
 
 .ewv-magazine-button:hover{
   background:white;
